--- a/templates/smart.conf.j2
+++ b/templates/smart.conf.j2
@@ -1,16 +1,17 @@
-{# Smart 智能模式 OpenClash 覆写配置模板 #}
-{# ============================================================================ #}
-{# 配置名称: {{ config_name }} #}
-{# 配置类型: Smart 智能模式 #}
-{# Provider 数量: {{ provider_count }} #}
-{# ============================================================================ #}
+# ==========================================================
+# OpenClash 覆写配置文件 - Smart 智能模式
+# 来源: {{ source_type }} / {{ config_name }}
+# Provider数量: {{ provider_count }}
+# 特性: 自动选择最优节点
+# ==========================================================
 
 [General]
-CONFIG_FILE = /etc/openclash/config/{{ config_name }}.yaml
 CORE_TYPE = Smart
+CONFIG_FILE = /etc/openclash/config/{{ config_name }}.yaml
 
-# DNS
+# DNS 设置
 ENABLE_REDIRECT_DNS = 1
+ENABLE_CUSTOM_DNS = 0
 APPEND_WAN_DNS = 1
 STORE_FAKEIP = 1
 CUSTOM_FAKEIP_FILTER = 1
@@ -28,7 +29,7 @@ ENABLE_UDP_PROXY = 1
 ROUTER_SELF_PROXY = 1
 PROXY_MODE = rule
 
-# Smart 模式特有
+# Smart 模式设置
 AUTO_SMART_SWITCH = 1
 SMART_STRATEGY = sticky-sessions
 SMART_ENABLE_LGBM = 0
@@ -41,22 +42,22 @@ SMART_COLLECT_RATE = 1
 {% if provider_count == 1 %}
 SUB_INFO_URL = $EN_KEY
 {% else %}
-{%- for env_var in env_variables %}
-SUB_INFO_URL{{ loop.index }} = ${{ env_var }}
-{%- endfor %}
+{% for i in range(1, provider_count + 1) %}
+SUB_INFO_URL{{ i }} = $EN_KEY{{ i }}
+{% endfor %}
 {% endif %}
 
-# 下载精简后的 YAML
-DOWNLOAD_FILE = url={{ yaml_download_url }}, path=/etc/openclash/config/{{ config_name }}.yaml, cron=0 6 * * *, force=true
+# 下载配置
+DOWNLOAD_FILE = url={{ yaml_url }}, path=/etc/openclash/config/{{ config_name }}.yaml, cron=0 6 * * *, force=true
 
 RESTART = true
 
-# 覆写规则
 [Overwrite]
+# 更新订阅链接
 {% if provider_count == 1 %}
 ruby_edit "$CONFIG_FILE" "['proxy-providers']['{{ proxy_providers[0].name }}']['url']" "$EN_KEY"
 {% else %}
-{%- for provider in proxy_providers %}
+{% for provider in proxy_providers %}
 ruby_edit "$CONFIG_FILE" "['proxy-providers']['{{ provider.name }}']['url']" "$EN_KEY{{ loop.index }}"
-{%- endfor %}
+{% endfor %}
 {% endif %}
